@@ -197,6 +197,14 @@
     return [navigation.leakRef() autorelease];
 }
 
+- (WKNavigation *)reload
+{
+    _page->reload(false);
+
+    // FIXME: return a WKNavigation object.
+    return nil;
+}
+
 - (WKNavigation *)goToBackForwardListItem:(WKBackForwardListItem *)item
 {
     _page->goToBackForwardItem(&item._item);
